Bugfix: do not scroll for overflowing boxes

--- a/src/ui/components/_box.scss
+++ b/src/ui/components/_box.scss
@@ -36,7 +36,6 @@
 
   .ui-box-content {
     padding: 20px;
-    overflow: scroll;
 
     &.ui-box-content-transparent {
       background: transparent;
